
* Fixed ``paste.proxy`` to not use anything based on the dict form of
  ``httplib..HTTPMessage``.  This form folds headers together in a way
  that breaks ``Set-Cookie`` headers (two ``Set-Cookie`` headers would
  be merged into one).

* ``paste.request.parse_formvars`` didn't accept parameters in
  ``CONTENT_TYPE``.  ``prototype.js`` sets a ``charset`` parameter,
  which caused a problem.

1.0
---

* Fixed ``parsed_formvars`` potentially locking up on wsgi.input
  after modification of ``QUERY_STRING``.

* Fixed problem where ``paste.exceptions.errormiddleware`` didn't
  expose the ``.close()`` method of the app_iter that it wraps (to
  catch exceptions).  This is a problem if the server about the
  errormiddleware aborts the request; it should then call
  ``.close()``, but won't necessarily exhaust the iterator to do so.

* Added entry point for ``paste.translogger``
  (``egg:Paste#translogger``)

* Fixed some cases where long data (e.g., a file upload) would show up
  in the error report, creating a very very large report.  Also, put
  in a monkeypatch for the ``cgi`` module so that
  ``repr(uploaded_field)`` won't load the entire field into memory
  (from its temporary file location).

* Added a ``force_host`` option to ``paste.proxy.TransparentProxy``,
  which will force all incoming requests to the same host, but leave
  the ``Host`` header intact.

* Added automatic cleanup of old sessions for ``paste.session``, from
  Amir Salihefendic.

* Quote the function name in tracebacks in the exception formatter;
  Genshi has function names that use ``<>``.

0.9.9
-----

* Fixed ``paste.response.HeaderDict`` ``get`` and ``setdefault``
  methods to be case insensitive

* Fix use of ``TestApp().post(params={'key': ['list of',
  'values']})`` as reported by Syver Enstad.

* ``paste.fileapp.DataApp`` is now directly usable (was previously
  only usable as an abstract base class).

0.9.8
-----

* Fixed ``wsgiwrappers.WSGIResponse.delete_cookie``. It also now takes